# TrayNarrator

./: .agent-ctx.json  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.context/: architecture.md  project_state.md
.context/docs/: README.md
.context/mcp/: README.md
.context/memory/: active_context.md  progress.md  project_brief.md  tech_context.md
.context/rules/: coding-standards.md
.context/skills/creating-rules/: SKILL.md
.context/skills/documenting-architecture/: SKILL.md
.context/skills/generating-skills/: SKILL.md
.context/skills/managing-agents/: SKILL.md
.context/skills/managing-memory/: SKILL.md
.context/skills/tracking-project-state/: SKILL.md
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
scripts/: build-and-deploy-wsl-win.sh  build.sh  deploy-win.sh  lint.sh  release.sh  setup.sh
scripts/win/: build.bat  lint.bat
src/: audio.rs  clipboard.rs  config.rs  hotkeys.rs  logging.rs  main.rs  state.rs  tray.rs  tts.rs
