[package]
name = "tray_narrator"
version = "0.3.0"
edition = "2021"
authors = ["avicdro"]
description = "Lector TTS ultraligero para Windows usando Piper TTS"
readme = "README.md"
license = "MIT"
repository = "https://github.com/avicdro/TrayNarrator"
homepage = "https://github.com/avicdro/TrayNarrator"
keywords = ["tts", "text-to-speech", "piper", "windows", "accessibility"]
categories = ["accessibility", "multimedia::audio"]
rust-version = "1.70"

# Compilar como aplicación Windows GUI (sin consola visible)
# Esto funciona junto con #![windows_subsystem = "windows"] en main.rs
[[bin]]
name = "tray_narrator"
path = "src/main.rs"

[dependencies]
# Atajos de teclado globales
inputbot = "0.6"

# Lectura del portapapeles
arboard = "3.4"

# Simulación de input de teclado (Ctrl+C)
enigo = "0.2"

# Reproducción de audio WAV
rodio = "0.19"

# Estado global thread-safe para el reproductor
lazy_static = "1.5"

# Para el Mutex atómico y condiciones de carrera
parking_lot = "0.12"

# System tray icon (cross-platform)
tray-icon = "0.19"

# Menú contextual para el tray (cross-platform)
muda = "0.15"

# Decodificación de imagen PNG para el icono del tray
image = { version = "0.25", default-features = false, features = ["png"] }

# Event loop para el system tray
winit = "0.30"

[profile.release]
# Optimización máxima para binario pequeño
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# ═══════════════════════════════════════════════════════════════════════════════
# CONFIGURACIÓN DE CARGO-DIST - Para crear releases automatizadas
# ═══════════════════════════════════════════════════════════════════════════════

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build for
targets = ["x86_64-pc-windows-msvc"]
# Path that installers should place binaries in (Windows-style)
install-path = "CARGO_HOME"
# Whether to auto-include files
auto-includes = true
# Include these extra artifacts in the archive
include = [
    "piper/",
    "LICENSE",
    "README.md",
]
